crates/fig-lexer/tests/snapshots/integration_tests__control_flow__for_nested.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: nested_loops
- LParen
- Ident: n
- Colon
- USize
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- For
- Ident: i
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- Ident: n
- RParen
- Newline
- Indent
- For
- Ident: j
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- Ident: n
- RParen
- Newline
- Indent
- Pass
- Newline
- Dedent
- Dedent
- Dedent
