crates/fig-lexer/tests/snapshots/integration_tests__control_flow__for_with_body.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: process
- LParen
- Ident: data
- Colon
- LBracket
- I32
- RBracket
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- For
- Ident: item
- In
- Ident: data
- Newline
- Indent
- Let
- Ident: doubled
- Eq
- Ident: item
- Star
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Let
- Ident: clamped
- Eq
- Ident: doubled
- Newline
- Pass
- Newline
- Dedent
- Dedent
