crates/fig-lexer/tests/snapshots/integration_tests__control_flow__if_else.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: abs
- LParen
- Ident: x
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Indent
- If
- Ident: x
- Ge
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Return
- Ident: x
- Newline
- Dedent
- Else
- Newline
- Indent
- Return
- Minus
- Ident: x
- Newline
- Dedent
- Dedent
